# mock-services

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.cargo/: config.toml
example/: api.rest
src/: db.rs  main.rs  mocks.rs  models.rs  routes.rs
