[package]
name = "mock-services"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "signal"] }
mongodb = { version = "2.8", features = ["tokio-runtime"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["formatting", "macros", "serde"] }
tokio-util = "0.7"
anyhow = "1"
aws-config = "1"
aws-sdk-s3 = "1"